--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -15,6 +15,6 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add docs
-          git commit -m "docs update: latest" || echo "No document updates"
+          git commit -m "docs update: latest" || echo "No document(s) updates found!"
           git push
           
