--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/netselect",
             "env": {},
-            "args": ["google.com"]
+            "args": ["-d", "google.com", "google.in", "-t", "2"]
         }
     ]
 }
